fixed svg-alignment on mobile

--- a/src/scss/sections/about.scss
+++ b/src/scss/sections/about.scss
@@ -16,7 +16,9 @@ section.about {
 
     &-svg {
       max-width: 400px;
-      margin-left: 50px;
+      @include mq($mq-small) {
+        margin-left: 50px;
+      }
       svg {
         height: 90%;
         width: 100%;
